@@ -1,3 +1,6 @@
+Sep 25, 2023
+  removed obsolete code to precompute gviewer data in ONT_TERM_STATS table
+
 Aug 25, 2023
   updated CL source to CL release 2023-08-24
 
